--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.0.5 Wed Jul 16 23:56:57 PDT 2014
+ - Move doc to Swim
+ - Fix Meta and add Contributing file
+
 0.0.4 Mon Jun 16 15:38:15 PDT 2014
  - Use manual versioning
 
