--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.0.6 Sat Aug  2 23:51:31 PDT 2014
+ - Fix copyright years.
+
 0.0.5 Wed Jul 16 23:56:57 PDT 2014
  - Move doc to Swim
  - Fix Meta and add Contributing file
